Updated Copyright Sign HTML Entity

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -48,7 +48,7 @@
     </div>
 
     <footer>
-        <p class="copyright"><span style="font-family: none;">&copy</span><script>document.write(new Date().getFullYear())</script>&nbsp;{{config.copyright}}
+        <p class="copyright"><span style="font-family: none;">&copy;</span><script>document.write(new Date().getFullYear())</script>&nbsp;{{config.copyright}}
             {{#each config.footer}}
                 | <a href="{{this.href}}" target="_blank">{{this.name}}</a>
             {{/each}}
