change logos & config for andreasf.ink

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/brand.png" height="30" class="d-inline-block align-top" alt="Logo {{config.brand}}" loading="lazy">
+                <img src="img/brand.svg" height="30" class="d-inline-block align-top" alt="Logo {{config.brand}}" loading="lazy">
                 {{config.brand}}
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapse"
@@ -44,7 +44,7 @@
     <div id="particles-js"></div>
 
     <div class="container">
-        <img class="logo" src="img/logo_full.png" alt="Full Logo {{config.brand}}">
+        <img class="logo" src="img/logo_full.svg" alt="Full Logo {{config.brand}}">
     </div>
 
     <footer>
