--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -74,6 +74,15 @@
     /* Legacy iOS */
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 
 body {
     font-family: 'Strait', sans-serif;
